--- a/src/assets/less/system.less
+++ b/src/assets/less/system.less
@@ -1,4 +1,16 @@
+@import (reference) "base.less";
 
+.system{
+    width: 25.08rem;
+    height: 8.48rem;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    .transform(translate(-50%,-50%));
+    .bg{
+        width: 100%;
+    }
+}
 .system-content{
   width: 100%;
   height: 100%;
